# HomeCAD

./: README.md  pyproject.toml
exports/: ball.3mf  ball.stl  bathroom_hanger.3mf  bathroom_hanger.stl  cardboard_clip.3mf  cardboard_clip.stl  gridfinity_seed_starter.3mf  gridfinity_seed_starter.stl  plant_light_hook.3mf  plant_light_hook.stl  plant_light_hook_v2.3mf  shelf_hole_cover_v1.3mf  shelf_hole_cover_v1.stl  shelf_hole_cover_v2.3mf  shelf_hole_cover_v2.stl  socker_cover.3mf  socker_cover.stl  socket_cover.3mf  window_mount.3mf  window_mount.stl
models/: ball.py  bathroom_hanger.py  cardboard_clip.py  gridfinity_seed_starter.py  plant_light_hook.py  plant_light_hook_v2.py  shelf_hole_cover_v1.py  shelf_hole_cover_v2.py  socker_cover.py  socket_cover.py  window_mount.py
