[tool.poetry]
name = "homecad"
version = "0.1.0"
description = ""
authors = ["Zhu Zhaomeng <zhaomeng.zhu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
multimethod = "^1.12"
typish = "^1.9.3"
nlopt = "^2.9.0"
casadi = "^3.6.7"
cadquery = {git = "https://github.com/CadQuery/cadquery.git"}
ezdxf = "^1.3.5"
path = "^17.0.0"
jupyterlab = "^4.3.4"
cq-editor = {git = "https://github.com/CadQuery/CQ-editor.git"}
pyqt5 = "^5.15.11"
spyder = "^5"
pyqtgraph = "^0.13.7"
logbook = "^1.8.0"
solidpython2 = "^2.1.0"
cadquery-ocp = "^7.7.2"
watchdog = "^6.0.0"
build123d = "^0.8.0"
ocp-vscode = "2.6.1"
ocp-tessellate = "~3.0.8"
jupyter-console = "^6.6.3"
ipykernel = "^6.29.5"
ruff = "^0.8.4"
bd-warehouse = {git = "https://github.com/gumyr/bd_warehouse.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
